# renovate-repro-9369

./: README.md  pyproject.toml
.github/: renovate.json
